Fixed header issue;Added scope/content documentation;Added PlanDefinition template

--- a/input/includes/fragment-header.html
+++ b/input/includes/fragment-header.html
@@ -1,1 +1,9 @@
+<div id="family-nav">
+  <a id="family-logo" no-external="true" href="https://github.com/cqframework"><img height="50" alt="Visit the CQF github organization website" src="{{site.data.info.assets}}assets/images/cqf.png"/> </a>
+</div>
+
+<div id="hl7-nav">
+
+</div>
+<!-- TODO: Move this into the base template so we don't have to repeat the above -->
 <script type="text/javascript" src="cql.js"> </script>
